NEWS - OpenPrinting CUPS Filters v1.27.5 - 2020-06-05
-----------------------------------------------------

CHANGES IN V2.0.0

	- libcupsfilters: Let the filter functions not load the PPD
	  and not mark options in the PPD files to make them better
	  usable with Printer Applications and to avoid race
	  conditions in filter chains. To keep the behavior of CUPS
	  filters, changed the filterCUPSWrapper() function
	  appropriately.
	- libcupsfilters, libppd: In the PPD generators give priority
	  to Apple Raster against PDF (Issue #331).
	- libcupsfilters: In the cupsRasterParseIPPOptions() map the
	  color spaces the same way as in the PPD generator (Issue
	  #326, Pull request #327).	
	- libcupsfilters, libppd: In generated PPDs add a grayscale
	  mode if there are only color printing modes (from
	  OpenPrinting CUPS).
	- libcupsfilters, libppd: In generated PPDs add an "OutputBin"
	  option also if it has only one choice (OpenPrinting CUPS
	  pull request #18).
	- libcupsfilters, libppd: Generated PPDs could have an
	  "Unknown" default InputSlot (OpenPrinting CUPS issue #44).
	- cups-browsed: Removed unneeded IPP attribute additions
	  preventing the created local queues from preserving a
	  location or description the user assigns to them (Issue
	  #323).
	- cups-browsed: Removed all calls of the resolve_uri() function
	  of libcupsfilters, as these are not actually needed and in case
	  the supplied DNS-SD-based URI is not resolvable, the function
	  gets stuck for ~5 seconds.
	- libcupsfilters: Added the possibility to define a callback
	  function to tell the filter function when the job got
	  canceled. Before, a pointer to an integer was used. This
	  change is to get more flexibility and especially to support
	  the papplJobIsCanceled() of PAPPL.
	- Build system: Added missing library dependencies to the
	  filters to make parallel builds work (Issue #319).
	- libppd, libcupsfilters, bannertopdf, texttopdf: Added